# LangGraph-DIY-car-agent

./: README.md  langgraph.json  main.py  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_ops.pckl
Data/cleaned/: abrazivnaya-glina-dlya-kuzova-kak-ispolzovat-i-dlya-chego-on-nuzhna_cleaned.md  chem-chernit-rezinu_cleaned.md  chem-otmyt-nasekomyh-s-avtomobilya_cleaned.md  chem-zashchitit-kuzov-avtomobilya-zimoy-kakoe-pokrytie-dlya-lkp-luchshe_cleaned.md  chistka-sidenij-avtomobilya-osnovnye-pravila-i-sovety_cleaned.md  chto-takoe-polirovka-avtomobilya_cleaned.md  dachnyy-deteyler_cleaned.md  dorozhnyy-nabor-avtokosmetiki-dlya-ukhoda-za-avtomobilem-chto-nuzhno-vzyat-s-soboy_cleaned.md  idei-podarkov-dlya-muzhchiny-avtolyubitelya_cleaned.md  kak-bystro-i-prosto-pridat-kuzovu-blesk_cleaned.md  kak-delayut-himchistku-salona-avtomobilya_cleaned.md  kak-izbavitsya-ot-zapaha-v-salone-avto_cleaned.md  kak-legko-i-bystro-pochistit-kozhu-i-alkantaru_cleaned.md  kak-otmyt-bitum-s-kuzova-avtomobilya_cleaned.md  kak-otpolirovat-avtomobil-svoimi-rukami_cleaned.md  kak-otpolirovat-fary_cleaned.md  kak-podgotovit-avtomobil-k-vesne_cleaned.md  kak-pravilno-chistit-i-ukhazhivat-za-khromirovannymi-elementami-kuzova-avtomobilya_cleaned.md  kak-pravilno-myt-dvigatel-avtomobilya_cleaned.md  kak-pravilno-otpolirovat-lobovoe-steklo_cleaned.md  kak-snyat-tonirovku-so-stekla-avtomobilya_cleaned.md  kak-ubrat-rzhavchinu-s-kuzova_cleaned.md  (+24 more)
Notebooks/: LLMChainExtractor_test.ipynb  create_vector_db.py  llm.py  multystep_reasoning_agent.py  retrieval_tool.py  test_retr.py
