[project]
name = "deteiling-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "isort>=6.1.0",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.31",
    "langchain-huggingface>=0.3.1",
    "langchain-tavily>=0.2.12",
    "langgraph>=0.6.10",
    "markdown>=3.9",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.1.1",
    "unstructured>=0.18.15",
]

[tool.isort]
profile = "black"

[tool.setuptools.packages.find]
include = ["Notebooks*"]
